<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.9</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>pe.com.relari</groupId>
    <artifactId>api-employee-devops</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>API Employee Devops</name>
    <description>Employee Management API</description>

    <properties>
        <java.version>17</java.version>
<!--        <sonar.projectKey>api-employee-devops</sonar.projectKey>-->
<!--        <sonar.projectName>api-employee-devops</sonar.projectName>-->

        <!-- For SonarCloud -->
<!--        <sonar.organization>relari</sonar.organization>-->
<!--        <sonar.host.url>https://sonarcloud.io</sonar.host.url>-->
<!--        <sonar.token>5a7d3aea33719671810456e3ebdac6abfe76b02b</sonar.token>-->

        <!-- For Local SonarQube -->
<!--        <sonar.organization>${project.groupId}:${project.artifactId}</sonar.organization>-->
<!--        <sonar.host.url>http://localhost:9000</sonar.host.url>-->
<!--        <sonar.token>sqa_a872748770a8788b2c31b3f3f373f0ca6797ceb9</sonar.token>-->
        <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
        <sonar.junit.reportPaths>${project.build.directory}/surefire-reports</sonar.junit.reportPaths>
        <sonar.exclusions>
            **/EmployeeApplication.*,
            **/config/**,
            **/exception/**,
            **/model/**,
            **/util/**
        </sonar.exclusions>
        <jacoco.version>0.8.13</jacoco.version>
        <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>2.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>2.8.13</version>
        </dependency>

        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>${org.mapstruct.version}</version>
        </dependency>

        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct-processor</artifactId>
            <version>${org.mapstruct.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- Karate Framework -->

<!-- https://mvnrepository.com/artifact/com.intuit.karate/karate-core -->
<!--        <dependency>-->
<!--            <groupId>com.intuit.karate</groupId>-->
<!--            <artifactId>karate-core</artifactId>-->
<!--            <version>1.3.1</version>-->
<!--        </dependency>-->

<!-- https://mvnrepository.com/artifact/com.intuit.karate/karate-apache -->
<!--       <dependency>-->
<!--           <groupId>com.intuit.karate</groupId>-->
<!--           <artifactId>karate-apache</artifactId>-->
<!--           <version>0.9.6</version>-->
<!--           <scope>test</scope>-->
<!--       </dependency>-->

<!-- https://mvnrepository.com/artifact/com.intuit.karate/karate-junit5 -->
<!--        <dependency>-->
<!--            <groupId>com.intuit.karate</groupId>-->
<!--            <artifactId>karate-junit5</artifactId>-->
<!--            <version>1.4.1</version>-->
<!--            <scope>test</scope>-->
<!--        </dependency>-->
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>

                <executions>
                    <execution>
                        <id>default-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <excludes>
                                <exclude>**/config/**</exclude>
                                <exclude>**/exception/**</exclude>
                                <exclude>**/mapper/**</exclude>
                                <exclude>**/model/**</exclude>
                                <exclude>**/util/**</exclude>
                                <exclude>**/EmployeeApplication.*</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                    <execution>
                        <id>jacoco-check</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <rule>
                                    <element>BUNDLE</element>
                                    <limits>
                                        <limit>
                                            <counter>COMPLEXITY</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>0.50</minimum>
                                        </limit>
                                    </limits>
                                </rule>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
                <version>5.5.0.6356</version>
            </plugin>
        </plugins>
    </build>

</project>
